--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>My Portfolio</title>
-  </head>
+  <%- include('../partials/header'); %>
   <body>
     hello
-  </body>
-</html>
+    <%- include('../partials/footer'); %>
