--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,4 +1,8 @@
   <%- include('../partials/header'); %>
   <body>
-    hello
+    <div class="container">
+      <iframe style="border: 0; width: 350px; height: 442px; margin: 2rem;" src="https://bandcamp.com/EmbeddedPlayer/track=3406798752/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/transparent=true/" seamless>
+        <a href="https://sanguinepenguin.bandcamp.com/track/impatient-cathedral">Impatient Cathedral by sanguinepenguin</a>
+      </iframe>
+    </div>
     <%- include('../partials/footer'); %>
