add music view, pass filenames

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,12 +2,12 @@
     <head>
       <meta charset="utf-8">
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-      <link rel="stylesheet" href="/css/mystyle.css">
+      <link rel="stylesheet" href="/resources/css/mystyle.css">
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <nav>
         <div id="mynavbar" class="row">
           <a class="nav-link col" href="/">Motion</a>
-          <a class="nav-link col" href="/">Music</a>
+          <a class="nav-link col" href="/music">Music</a>
           <a class="nav-link col" href="/">Interactive</a>
           <a class="nav-link col" href="/">GitHub</a>
           <a class="nav-link col" href="/">LinkedIn</a>
