--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,8 +9,8 @@
           <a class="nav-link col" href="/">Motion</a>
           <a class="nav-link col" href="/music">Music</a>
           <a class="nav-link col" href="/">Interactive</a>
-          <a class="nav-link col" href="/">GitHub</a>
-          <a class="nav-link col" href="/">LinkedIn</a>
+          <a class="nav-link col" href="https://www.github.com/lys0l">GitHub</a>
+          <a class="nav-link col" href="https://www.linkedin.com/in/daniellisle">LinkedIn</a>
           <a class="nav-link col" href="/">ThoughtGarden</a>
         </div>
       </nav>
