--- a/views/pages/music.ejs
+++ b/views/pages/music.ejs
@@ -1,5 +1,8 @@
 <%- include('../partials/header'); %>
-<body>   
+<body>
+    <div id="pageHeader" class="container text-center">
+        <h1 style="margin: 1%;">Musical Compositions</h1>
+    </div>   
     <div id="musicDiv" class="container d-flex flex-wrap justify-content-center">
         <% var title %>
         <% var path %>
