--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,7 +6,7 @@
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <nav>
         <div id="mynavbar" class="row">
-          <a class="nav-link col" href="/">Motion</a>
+          <a class="nav-link col" href="/video">Video</a>
           <a class="nav-link col" href="/music">Music</a>
           <a class="nav-link col" href="/">Interactive</a>
           <a class="nav-link col" href="https://www.github.com/lys0l">GitHub</a>
@@ -14,5 +14,5 @@
           <a class="nav-link col" href="/">ThoughtGarden</a>
         </div>
       </nav>
-      <title>Aloys</title>
+      <title>DREAMCHEF</title>
     </head>
