--- a/views/pages/music.ejs
+++ b/views/pages/music.ejs
@@ -5,15 +5,16 @@
     </div>   
     <div id="musicDiv" class="container d-flex flex-wrap justify-content-center">
         <% var title %>
-        <% var path %>
+        <% var fileName %>
         <% for(var i = 0; i < numFiles; i++) { %>
-            <% path = fileNames[i];%>
-            <% title = path.slice(0,-4).replace(/([A-Z])/g, ' $1'); %>
+            <% fileName = fileNames[i];%>
+            <% title = fileName.slice(0,-4).replace(/([A-Z])/g, ' $1'); %>
             <div class="card" style="width: 15rem; margin: 1rem;">
+                <img class="card-img-top rounded" src="/content/music/cover/<%= fileName.replace('.mp3','.jpg') %>" alt="Cover image not found" style="width: 100%; height: 100%; padding: 5%">
                 <div class="card-body">
                     <p class="card-text text-center"><%= title %></p>
                     <audio controls preload="metadata" style=" width:100%;">
-                        <source src="/content/music/<%= path %>" type="audio/mpeg">
+                        <source src="/content/music/<%= fileName %>" type="audio/mpeg">
                         Your browser does not support the audio element.
                     </audio><br />
                 </div>
