--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-        <div class="text-center p-4 fixed-bottom" style="background-color: rgba(0, 0, 0, 0.05);">
+        <div class="text-center p-4 fixed-bottom" id="footer">
             © 2021 Copyright: Daniel Aloysius Lisle
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
