--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,12 +6,16 @@
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <nav>
         <div id="mynavbar" class="row">
-          <a class="nav-link col" href="/video">Video</a>
-          <a class="nav-link col" href="/music">Music</a>
-          <a class="nav-link col" href="/">Interactive</a>
-          <a class="nav-link col" href="https://www.github.com/lys0l">GitHub</a>
-          <a class="nav-link col" href="https://www.linkedin.com/in/daniellisle">LinkedIn</a>
-          <a class="nav-link col" href="/">ThoughtGarden</a>
+          <a class="nav-link col" href="/"><h3>Home</h3></a>
+          <a class="nav-link col" href="/video"><h3>Video</h3></a>
+          <a class="nav-link col" href="/music"><h3>Music</h3></a>
+          <a class="nav-link col" href="/interactive"><h3>Interactive</h3></a>
+          <a class="nav-link col-1" href="https://www.github.com/lys0l">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/2048px-Octicons-mark-github.svg.png" alt="GitHub" width="30%" style="filter: invert(1)">
+          </a>
+          <a class="nav-link col-1" href="https://www.linkedin.com/in/daniellisle">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/LinkedIn_logo_initials.png/768px-LinkedIn_logo_initials.png" width="30%" alt="LinkedIn">
+          </a>
         </div>
       </nav>
       <title>DREAMCHEF</title>
