--- a/views/pages/music.ejs
+++ b/views/pages/music.ejs
@@ -1,7 +1,8 @@
 <%- include('../partials/header'); %>
 <body>
     <div id="pageHeader" class="container text-center">
-        <h1 style="margin: 1%;">Musical Compositions</h1>
+        <h1 style="margin: 1%;">Music</h1>
+        <h2>Original Compositions</h2>
     </div>   
     <div id="musicDiv" class="container d-flex flex-wrap justify-content-center">
         <% var title %>
