--- a/views/pages/video.ejs
+++ b/views/pages/video.ejs
@@ -4,6 +4,12 @@
         <h1 style="margin: 1%;">Video</h1>
     </div>
     <div class="container text-center">
+        <h2 style="margin: 1%;">3D Animation</h2>
+    </div>
+    <div class="container text-center">
+        <h2 style="margin: 1%;">Motion Graphics</h2>
+    </div>
+    <div class="container text-center">
         <h2 style="color: black; margin: 1%;">Information Technology Tutorials</h2>
     </div>
     <div class="container d-flex flex-wrap justify-content-center">
@@ -18,4 +24,5 @@
             
         <% } %>
     </div>
+    
     <%- include('../partials/footer'); %>
