--- a/views/pages/music.ejs
+++ b/views/pages/music.ejs
@@ -10,10 +10,10 @@
         <% for(var i = 0; i < numFiles; i++) { %>
             <% fileName = fileNames[i];%>
             <% title = fileName.slice(0,-4).replace(/([A-Z])/g, ' $1'); %>
-            <div class="card" style="width: 15rem; margin: 1rem;">
+            <div class="card" style="width: 18rem; margin: 1rem;">
                 <img class="card-img-top rounded" src="/content/music/cover/<%= fileName.replace('.mp3','.jpg') %>" alt="Cover image not found" style="width: 100%; height: 100%; padding: 5%">
-                <div class="card-body">
-                    <p class="card-text text-center">
+                <div class="card-body" style="padding: 0;">
+                    <p class="card-text text-center" style="font-size: 14pt;">
                         <i style="color:white;"><%= title %></i>
                     </p>
                     <audio controls preload="metadata" style=" width:100%;">
