--- a/views/pages/video.ejs
+++ b/views/pages/video.ejs
@@ -4,25 +4,28 @@
         <h1 style="margin: 1%;">Video</h1>
     </div>
     <div class="container text-center">
-        <h2 style="margin: 1%;">3D Animation</h2>
-    </div>
-    <div class="container text-center">
-        <h2 style="margin: 1%;">Motion Graphics</h2>
-    </div>
-    <div class="container text-center">
         <h2 style="color: black; margin: 1%;">Information Technology Tutorials</h2>
     </div>
     <div class="container d-flex flex-wrap justify-content-center">
-        <% var video; %>
+        <% var video, vsource; %>
         <% for(var i = 0; i < numVideos-1; i++) { %>
             <% video = videos[i];%>
-            <div class="card" style="width: 40%; margin: 1%; padding: 0">
+            <% vsource = "https://www.youtube.com/embed/" + video.id.videoId; %>
+            <% console.log(vsource); %>
+            <div class="card" style="width: 40%; height: 280px; margin: 1%; padding: 0">
                 <div class="card-body" style="padding: 4%;">
-                    <iframe style="width: 100%" src="https://www.youtube.com/embed/<%= video.id.videoId %>" frameborder="0" allow="accelerometer; encrypted-media; picture-in-picture" allowfullscreen></iframe>
+                    <iframe style="width: 100%; height: 100%;" src="<%= vsource %>" frameborder="0" allow="accelerometer; encrypted-media; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
             
         <% } %>
     </div>
-    
+    <div class="container text-center">
+        <h2 style="color: black; margin: 1%;">Motion Graphics</h2>
+    </div>
+    ...
+    <div class="container text-center">
+        <h2 style="color: black; margin: 1%;">Vlogs and Sketches</h2>
+    </div> 
+    ...
     <%- include('../partials/footer'); %>
