--- a/views/pages/video.ejs
+++ b/views/pages/video.ejs
@@ -8,8 +8,8 @@
     </div>
     <div class="container d-flex flex-wrap justify-content-center">
         <% var video, vsource; %>
-        <% for(var i = 0; i < numVideos-1; i++) { %>
-            <% video = videos[i];%>
+        <% for(var i = 0; i < GuideWareIds.length-1; i++) { %>
+            <% video = GuideWareIds[i];%>
             <% vsource = "https://www.youtube.com/embed/" + video.id.videoId; %>
             <% console.log(vsource); %>
             <div class="card" style="width: 40%; height: 280px; margin: 1%; padding: 0">
@@ -23,9 +23,33 @@
     <div class="container text-center">
         <h2 style="color: black; margin: 1%;">Motion Graphics</h2>
     </div>
-    ...
+    <div class="container d-flex flex-wrap justify-content-center">
+        <% for(var i = 0; i < motionGraphicsIds.length; i++) { %>
+            <% video = motionGraphicsIds[i];%>
+            <% vsource = "https://www.youtube.com/embed/" + video.snippet.resourceId.videoId; %>
+            <% console.log(vsource); %>
+            <div class="card" style="width: 40%; height: 280px; margin: 1%; padding: 0">
+                <div class="card-body" style="padding: 4%;">
+                    <iframe style="width: 100%; height: 100%;" src="<%= vsource %>" frameborder="0" allow="accelerometer; encrypted-media; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
+            
+        <% } %>
+    </div>
     <div class="container text-center">
         <h2 style="color: black; margin: 1%;">Vlogs and Sketches</h2>
     </div> 
-    ...
+    <div class="container d-flex flex-wrap justify-content-center">
+        <% for(var i = 0; i < liveActionIds.length; i++) { %>
+        <% video = liveActionIds[i];%>
+        <% vsource = "https://www.youtube.com/embed/" + video.snippet.resourceId.videoId; %>
+        <% console.log(vsource); %>
+        <div class="card" style="width: 40%; height: 280px; margin: 1%; padding: 0">
+            <div class="card-body" style="padding: 4%;">
+                <iframe style="width: 100%; height: 100%;" src="<%= vsource %>" frameborder="0" allow="accelerometer; encrypted-media; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </div>
+        <% } %>
+    </div>
+    
     <%- include('../partials/footer'); %>
