--- a/views/pages/video.ejs
+++ b/views/pages/video.ejs
@@ -12,10 +12,8 @@
             <% video = GuideWareIds[i];%>
             <% vsource = "https://www.youtube.com/embed/" + video.id.videoId; %>
             <% console.log(vsource); %>
-            <div class="card" style="width: 40%; height: 280px; margin: 1%; padding: 0">
-                <div class="card-body" style="padding: 4%;">
-                    <iframe style="width: 100%; height: 100%;" src="<%= vsource %>" frameborder="0" allow="accelerometer; encrypted-media; picture-in-picture" allowfullscreen></iframe>
-                </div>
+            <div class="card video-card">
+                    <iframe class="youtube-iframe" src="<%= vsource %>" frameborder="0" allow="accelerometer; encrypted-media; picture-in-picture" allowfullscreen></iframe>
             </div>
             
         <% } %>
@@ -28,10 +26,8 @@
             <% video = motionGraphicsIds[i];%>
             <% vsource = "https://www.youtube.com/embed/" + video.snippet.resourceId.videoId; %>
             <% console.log(vsource); %>
-            <div class="card" style="width: 40%; height: 280px; margin: 1%; padding: 0">
-                <div class="card-body" style="padding: 4%;">
-                    <iframe style="width: 100%; height: 100%;" src="<%= vsource %>" frameborder="0" allow="accelerometer; encrypted-media; picture-in-picture" allowfullscreen></iframe>
-                </div>
+            <div class="card video-card">
+                    <iframe class="youtube-iframe" src="<%= vsource %>" frameborder="0" allow="accelerometer; encrypted-media; picture-in-picture" allowfullscreen></iframe>
             </div>
             
         <% } %>
@@ -44,10 +40,8 @@
         <% video = liveActionIds[i];%>
         <% vsource = "https://www.youtube.com/embed/" + video.snippet.resourceId.videoId; %>
         <% console.log(vsource); %>
-        <div class="card" style="width: 40%; height: 280px; margin: 1%; padding: 0">
-            <div class="card-body" style="padding: 4%;">
-                <iframe style="width: 100%; height: 100%;" src="<%= vsource %>" frameborder="0" allow="accelerometer; encrypted-media; picture-in-picture" allowfullscreen></iframe>
-            </div>
+        <div class="card video-card">
+                <iframe class="youtube-iframe" src="<%= vsource %>" frameborder="0" allow="accelerometer; encrypted-media; picture-in-picture" allowfullscreen></iframe>
         </div>
         <% } %>
     </div>
