--- a/views/pages/music.ejs
+++ b/views/pages/music.ejs
@@ -4,23 +4,27 @@
         <h1 style="margin: 1%;">Music</h1>
         <h2>Original Compositions</h2>
     </div>   
-    <div id="musicDiv" class="container d-flex flex-wrap justify-content-center">
+    <div class="container d-flex flex-wrap justify-content-center">
         <% var title %>
         <% var fileName %>
         <% for(var i = 0; i < numFiles; i++) { %>
             <% fileName = fileNames[i];%>
+            <% year = years[i] %>
             <% title = fileName.slice(0,-4).replace(/([A-Z])/g, ' $1'); %>
-            <div class="card" style="width: 18rem; margin: 1rem;">
-                <img class="card-img-top rounded" src="/content/music/cover/<%= fileName.replace('.mp3','.jpg') %>" alt="Cover image not found" style="width: 100%; height: 100%; padding: 5%">
-                <div class="card-body" style="padding: 0;">
-                    <p class="card-text text-center" style="font-size: 14pt;">
-                        <i style="color:white;"><%= title %></i>
-                    </p>
-                    <audio controls preload="metadata" style=" width:100%;">
-                        <source src="/content/music/<%= fileName %>" type="audio/mpeg">
-                        Your browser does not support the audio element.
-                    </audio><br />
+            <div class="card song-card" >
+                <div style="position: absolute">
+                    <div style="background-color: black; opacity: 0.8; color: white; font-size: 14pt; padding: 1vh; margin: 1.5vh">
+                        <%= title %>
+                    </div>
+                    <div style="background-color: black; opacity: 0.8; color: white; font-size: 8pt; margin: 0 1.5vh; padding: 0.5vh 1vh; width: 5vh;">
+                        <%= year %>
+                    </div>
                 </div>
+                <img class="card-img-top" src="/content/music/cover/<%= fileName.replace('.mp3','.jpg') %>" alt="Cover image not found" height="100%">
+                <audio controls preload="metadata">
+                    <source src="/content/music/<%= fileName %>" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio><br />
             </div>
         <% } %>
     </div>
