descriptions for interactive projects

--- a/views/pages/interactive.ejs
+++ b/views/pages/interactive.ejs
@@ -6,21 +6,53 @@
     <div class="container text-center">
         <div class="jumbotron">
             <h3>Space Game (2021)</h3>
+            
             <p>
                 Space Commander will be a first-person shooter, real-time strategy hybrid set in a three-dimensional battlefield.
                 Immerse yourself in the role of fleet commander as you watch the battle and enact your strategy from your capital ship.
                 If your defenses yield to the relentless enemy, leave the safety of your bridge to fend them off.
                 When victory is in your grasp, board the enemy capital ship to personally end your rival's exploits.
             </p>
-            Follow development on <a href="https://github.com/dreamchef/spacegame">GitHub</a>!
+            <p>
+                Follow development on <a href="https://github.com/dreamchef/spacegame">GitHub</a>!
+            </p> 
+            <div class="row">
+                <div class="col">
+                    <h5>Current Features</h3>
+                    <ul style="text-align: left;">
+                        <li>Oversee your fleet first-person from the command ship</li>
+                        <li>Select ship gamepieces and issue movement orders through a three-dimensional battlefield</li>
+                        <li>Monitor ships' health and ammunition levels</li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <h5>Planned Features</h3>
+                    <ul style="text-align: left;">
+                        <li>Enemy AI fleet that pursues and deals damage to your ships</li>
+                        <li>Issue attack commands to your ships</li>
+                        <li>Destruction or your or the AI's command ship, ending game</li>
+                    </ul>
+                </div>
+            </div>
         </div>
         <div class="jumbotron">
             <h3>Escape Game (2020)</h3>
             <p>
                 Escape a creepy house while being hunted by an enemy.  Four lock combations are needed to unlock the front door and escape.  
-                Combinations are hidden in objects on each floor, and the hunter may detect you while you're snooping around.
+                Combinations are hidden in objects on each floor, and the hunter may detect you while you're snooping around.  Text-based 
+                adventure written in Python.
             </p>
-            Follow development on <a href="https://github.com/dreamchef/escapegame">GitHub</a>!
+            <p>
+                Clone from <a href="https://github.com/dreamchef/escapegame">GitHub</a>!
+            </p>
+            <div class="row">
+                <div class="col">
+                    <h5>Features</h3>
+                </div>
+                <div class="col">
+                    <h5>Planned Updates</h3>
+                </div>
+            </div>
         </div>
     </div>
 
