--- a/views/pages/interactive.ejs
+++ b/views/pages/interactive.ejs
@@ -4,14 +4,13 @@
         <h1 style="margin: 1%;">Interactive Media</h1>
     </div>
     <div class="container text-center">
-        <div class="jumbotron">
+        <div class="jumbotron" style="padding: 2%; border-radius: 0;">
             <h3>Space Game (2021)</h3>
             
             <p>
-                Space Commander will be a first-person shooter, real-time strategy hybrid set in a three-dimensional battlefield.
-                Immerse yourself in the role of fleet commander as you watch the battle and enact your strategy from your capital ship.
-                If your defenses yield to the relentless enemy, leave the safety of your bridge to fend them off.
-                When victory is in your grasp, board the enemy capital ship to personally end your rival's exploits.
+                Space Commander is a first-person shooter, real-time strategy hybrid set in a three-dimensional battlefield; currently being developed
+                in Unreal Engine 4.  Immerse yourself in the role of fleet commander as you watch the battle and enact your strategy from your capital ship.
+                Once you have weakened the enemy fleet, close in to destroy your rival's command ship and secure a victory.
             </p>
             <p>
                 Follow development on <a href="https://github.com/dreamchef/spacegame">GitHub</a>!
@@ -35,24 +34,17 @@
                 </div>
             </div>
         </div>
-        <div class="jumbotron">
+        <div class="jumbotron" style="padding: 2%; border-radius: 0;">
             <h3>Escape Game (2020)</h3>
             <p>
                 Escape a creepy house while being hunted by an enemy.  Four lock combations are needed to unlock the front door and escape.  
-                Combinations are hidden in objects on each floor, and the hunter may detect you while you're snooping around.  Text-based 
-                adventure written in Python.
+                Combinations are hidden around the house.  As you traverse each floor, search possible hiding spots to find them.  But be careful,
+                and use your flashlight sparingly, as this will allow the hunter to detect you.  If they do, you will have on last chance to hide; 
+                but if you fail, the house will become your permanent home.  A text-based, horror-themed roguelike written in Python.
             </p>
-            <p>
                 Clone from <a href="https://github.com/dreamchef/escapegame">GitHub</a>!
-            </p>
-            <div class="row">
-                <div class="col">
-                    <h5>Features</h3>
-                </div>
-                <div class="col">
-                    <h5>Planned Updates</h3>
-                </div>
-            </div>
+                <img width="100%" style="margin: 2% 0; border-radius: 10px;" src="/content/interactive/screenshots/escapegame01.png" alt="Screenshot 1">
+                <img width="100%" style="border-radius: 10px;" src="/content/interactive/screenshots/escapegame02.png" alt="Screenshot 2">
         </div>
     </div>
 
