completed interactive works page

--- a/views/pages/interactive.ejs
+++ b/views/pages/interactive.ejs
@@ -4,17 +4,27 @@
         <h1 style="margin: 1%;">Interactive Media</h1>
     </div>
     <div class="container text-center">
-        <div class="jumbotron" style="padding: 2%; border-radius: 0;">
+        <div class="jumbotron" style="border-radius: 0;">
             <h3>Space Game (2021)</h3>
             
             <p>
-                Space Commander is a first-person shooter, real-time strategy hybrid set in a three-dimensional battlefield; currently being developed
+                First-person shooter, real-time strategy hybrid set in a three-dimensional battlefield; currently being developed
                 in Unreal Engine 4.  Immerse yourself in the role of fleet commander as you watch the battle and enact your strategy from your capital ship.
                 Once you have weakened the enemy fleet, close in to destroy your rival's command ship and secure a victory.
             </p>
             <p>
                 Follow development on <a href="https://github.com/dreamchef/spacegame">GitHub</a>!
-            </p> 
+            </p>
+            <div class="row">
+                <div class="col" style="height: 47vh;">
+                    <img width="100%" height="90%" style="margin: 2% 0; border-radius: 10px;" src="/content/interactive/screenshots/spacegame02.png" alt="Screenshot 1">
+                </div>
+                
+                <div class="col" style="height: 47vh;">
+                    <img width="100%" height="90%" style="margin: 2% 0; border-radius: 10px;" src="/content/interactive/screenshots/spacegame01.png" alt="Screenshot 1">
+                </div>
+                
+            </div>
             <div class="row">
                 <div class="col">
                     <h5>Current Features</h3>
@@ -34,7 +44,7 @@
                 </div>
             </div>
         </div>
-        <div class="jumbotron" style="padding: 2%; border-radius: 0;">
+        <div class="jumbotron" style="border-radius: 0;">
             <h3>Escape Game (2020)</h3>
             <p>
                 Escape a creepy house while being hunted by an enemy.  Four lock combations are needed to unlock the front door and escape.  
@@ -43,8 +53,11 @@
                 but if you fail, the house will become your permanent home.  A text-based, horror-themed roguelike written in Python.
             </p>
                 Clone from <a href="https://github.com/dreamchef/escapegame">GitHub</a>!
-                <img width="100%" style="margin: 2% 0; border-radius: 10px;" src="/content/interactive/screenshots/escapegame01.png" alt="Screenshot 1">
-                <img width="100%" style="border-radius: 10px;" src="/content/interactive/screenshots/escapegame02.png" alt="Screenshot 2">
+                <div class="container justify-content-center">
+                    <img width="85%" style="margin: 2% 0; border-radius: 10px;" src="/content/interactive/screenshots/escapegame01.png" alt="Screenshot 1">
+                    <img width="85%" style="border-radius: 10px;" src="/content/interactive/screenshots/escapegame02.png" alt="Screenshot 2">
+                </div>
+                
         </div>
     </div>
 
