--- a/views/pages/interactive.ejs
+++ b/views/pages/interactive.ejs
@@ -1,5 +1,5 @@
 <%- include('../partials/header'); %>
-<body>
+<body style="background-color: #68d321;">
     <div id="pageHeader" class="container text-center">
         <h1 style="margin: 1%;">Interactive Media</h1>
     </div>
@@ -17,11 +17,11 @@
             </p>
             <div class="row">
                 <div class="col" style="height: 47vh;">
-                    <img width="100%" height="90%" style="margin: 2% 0; border-radius: 10px;" src="/content/interactive/screenshots/spacegame02.png" alt="Screenshot 1">
+                    <img width="100%" style="margin: 2% 0; border-radius: 10px;" src="/content/interactive/screenshots/spacegame02.png" alt="Screenshot 1">
                 </div>
                 
                 <div class="col" style="height: 47vh;">
-                    <img width="100%" height="90%" style="margin: 2% 0; border-radius: 10px;" src="/content/interactive/screenshots/spacegame01.png" alt="Screenshot 1">
+                    <img width="100%" style="margin: 2% 0; border-radius: 10px;" src="/content/interactive/screenshots/spacegame01.png" alt="Screenshot 1">
                 </div>
                 
             </div>
