--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,12 +1,11 @@
 <html lang="en">
     <head>
-      <meta charset="utf-8">
+      <meta charset="utf-8" name="viewport" content="user-scalable=0, initial-scale=1.0">
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
       <link rel="stylesheet" href="/resources/css/style.css">
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <nav>
         <div id="mynavbar" class="row" style="background-color: rgba(0, 0, 0, 0.85)">
-          <a class="nav-link col" href="/"><h3>Home</h3></a>
           <a class="nav-link col" href="/video"><h3>Video</h3></a>
           <a class="nav-link col" href="/music"><h3>Music</h3></a>
           <a class="nav-link col" href="/interactive"><h3>Interactive</h3></a>
