--- a/views/pages/music.ejs
+++ b/views/pages/music.ejs
@@ -1,5 +1,5 @@
 <%- include('../partials/header'); %>
-<body>
+<body style="background-color: #D616DE;">
     <div id="pageHeader" class="container text-center">
         <h1 style="margin: 1%;">Music</h1>
         <h2>Original Compositions</h2>
