fix interative screenshots div

--- a/views/pages/interactive.ejs
+++ b/views/pages/interactive.ejs
@@ -16,7 +16,7 @@
                 Follow development on <a href="https://github.com/dreamchef/spacegame">GitHub</a>!
             </p>
             <div class="row">
-                <div class="col" style="height: 47vh;">
+                <div class="col">
                     <img width="100%" style="margin: 2% 0; border-radius: 10px;" src="/content/interactive/screenshots/spacegame02.png" alt="Screenshot 1">
                 </div>
                 
