--- a/views/pages/music.ejs
+++ b/views/pages/music.ejs
@@ -21,6 +21,7 @@
                     </div>
                 </div>
                 <img class="card-img-top" src="/content/music/cover/<%= fileName.replace('.mp3','.jpg') %>" alt="Cover image not found" height="100%">
+                <div style="height: 0px"></div>
                 <audio controls preload="metadata">
                     <source src="/content/music/<%= fileName %>" type="audio/mpeg">
                     Your browser does not support the audio element.
