--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -24,12 +24,16 @@ a {
     background-position-x: center;
 }
 
-
 .song-card {
     width: 33vh;
     margin: 1%; 
-    background-color: white;
+    background-color: none;
     border: none;
+    border-radius: 0;
+}
+
+.card-img-top {
+    border-radius: 0;
 }
 
 .youtube-iframe {
