another attempt to fix ios audio

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -24,6 +24,16 @@ a {
     background-position-x: center;
 }
 
+audio {
+    width:100% !important;
+    min-height: 30px;
+    display:block;
+ }
+
+ .audio-block {
+    height:50px;
+ }
+
 .song-card {
     width: 33vh;
     margin: 1%; 
