--- a/views/pages/music.ejs
+++ b/views/pages/music.ejs
@@ -23,7 +23,7 @@
                     </div>
                     <img class="card-img-top"  style="width: 100%;" src="/content/music/cover/<%= fileName.replace('.mp3','.jpg') %>" alt="Cover image not found">
                 </div>
-                <div>
+                <div class="audio-block">
                     <audio controls preload="metadata" style="width: 100%;">
                         <source src="/content/music/<%= fileName %>" type="audio/mpeg">
                         Your browser does not support the audio element.
