--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,7 @@
           <a class="nav-link col" href="/video"><h3>Video</h3></a>
           <a class="nav-link col" href="/music"><h3>Music</h3></a>
           <a class="nav-link col" href="/interactive"><h3>Interactive</h3></a>
-          <a class="nav-link col-1" href="https://www.github.com/lys0l">
+          <a class="nav-link col-1" href="https://www.github.com/dreamchef">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/2048px-Octicons-mark-github.svg.png" alt="GitHub" width="30%" style="filter: invert(1)">
           </a>
           <a class="nav-link col-1" href="https://www.linkedin.com/in/daniellisle">
