--- a/views/pages/music.ejs
+++ b/views/pages/music.ejs
@@ -12,11 +12,11 @@
             <% year = years[i] %>
             <% title = fileName.slice(0,-4).replace(/([A-Z])/g, ' $1'); %>
             <div class="song-card">
-                <div style="width: 100%; background-image: url(/content/music/cover/<%= fileName.replace('.mp3','.jpg')%>);">
-                    <div style="background-color: black; opacity: 0.8; color: white; font-size: 14pt; padding: 1vh; margin: 1.5vh">
+                <div class = "song-cover"style="background-image: url(/content/music/cover/<%= fileName.replace('.mp3','.jpg')%>);">
+                    <div style="background-color: black; opacity: 0.8; color: white; font-size: 14pt; padding: 1vh; margin: 1.5vh;">
                         <%= title %>
                     </div>
-                    <div style="background-color: black; opacity: 0.8; color: white; font-size: 8pt; margin: 0 1.5vh; padding: 0.5vh 1vh; width: 5vh;">
+                    <div style="background-color: black; opacity: 0.8; color: white; font-size: 8pt; margin: 0 1.5vh; padding: 0.5vh 1vh; width: 45px;">
                         <%= year %>
                     </div>
                 </div> 
