--- a/views/pages/music.ejs
+++ b/views/pages/music.ejs
@@ -20,7 +20,7 @@
                 </div>
                 <div style="height: 120px;"></div>
                 <div class="audio-block">
-                    <audio controls preload="metadata" style="width: 100%;">
+                    <audio controls>
                         <source src="/content/music/<%= fileName %>" type="audio/mpeg">
                     </audio>
                 </div>
