--- a/views/pages/music.ejs
+++ b/views/pages/music.ejs
@@ -12,13 +12,12 @@
             <% year = years[i] %>
             <% title = fileName.slice(0,-4).replace(/([A-Z])/g, ' $1'); %>
             <div class = "song-card"style="background-image: url(/content/music/cover/<%= fileName.replace('.mp3','.jpg')%>);">
-                <div style="background-color: black; opacity: 0.8; color: white; font-size: 14pt; padding: 1vh; margin: 1.5vh;">
+                <div style="background-color: black; opacity: 0.8; color: white; font-size: 14pt;">
                     <%= title %>
                 </div>
-                <div style="background-color: black; opacity: 0.8; color: white; font-size: 8pt; margin: 0 1.5vh; padding: 0.5vh 1vh; width: 45px;">
+                <div style="background-color: black; opacity: 0.8; color: white; font-size: 8pt;">
                     <%= year %>
                 </div>
-                <div style="height: 120px;"></div>
                 <div class="audio-block">
                     <audio controls>
                         <source src="/content/music/<%= fileName %>" type="audio/mpeg">
