--- a/views/pages/music.ejs
+++ b/views/pages/music.ejs
@@ -12,10 +12,10 @@
             <% year = years[i] %>
             <% title = fileName.slice(0,-4).replace(/([A-Z])/g, ' $1'); %>
             <div class = "song-card"style="background-image: url(/content/music/cover/<%= fileName.replace('.mp3','.jpg')%>);">
-                <div style="background-color: black; opacity: 0.8; color: white; font-size: 14pt;">
+                <div style="background-color: black; opacity: 0.8; color: white; font-size: 14pt; position: absolute; top: 10px; left: 10px; padding: 5px">
                     <%= title %>
                 </div>
-                <div style="background-color: black; opacity: 0.8; color: white; font-size: 8pt;">
+                <div style="background-color: black; opacity: 0.8; color: white; font-size: 8pt; position: absolute; top: 60px; left: 10px; padding: 5px;">
                     <%= year %>
                 </div>
                 <div class="audio-block">
