force show audio slider on iphone

--- a/views/pages/music.ejs
+++ b/views/pages/music.ejs
@@ -19,7 +19,7 @@
                     <%= year %>
                 </div>
                 <div class="audio-block">
-                    <audio controls>
+                    <audio controls style="width: 100%;">
                         <source src="/content/music/<%= fileName %>" type="audio/mpeg">
                     </audio>
                 </div>
