remove margins for music page

--- a/views/pages/music.ejs
+++ b/views/pages/music.ejs
@@ -4,7 +4,7 @@
         <h1 style="margin: 1%;">Music</h1>
         <h2>Original Compositions</h2>
     </div>   
-    <div class="container d-flex flex-wrap justify-content-center">
+    <div class="d-flex flex-wrap justify-content-center">
         <% var title %>
         <% var fileName %>
         <% for(var i = 0; i < numFiles; i++) { %>
