--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -25,8 +25,8 @@ a {
 }
 
 .song-card {
-    width: 300px;
-    height: 300px;
+    width: 55vh;
+    height: 55vh;
     background-size: cover;
     position: relative;
     margin: 10px;
