social media icons constant height

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,10 +10,10 @@
           <a class="nav-link col" href="/music"><h3>Music</h3></a>
           <a class="nav-link col" href="/interactive"><h3>Interactive</h3></a>
           <a class="nav-link col-1" href="https://www.github.com/dreamchef">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/2048px-Octicons-mark-github.svg.png" alt="GitHub" width="30%" style="filter: invert(1)">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/2048px-Octicons-mark-github.svg.png" alt="GitHub" style="height: 35px;">
           </a>
           <a class="nav-link col-1" href="https://www.linkedin.com/in/daniellisle">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/LinkedIn_logo_initials.png/768px-LinkedIn_logo_initials.png" width="30%" alt="LinkedIn">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/LinkedIn_logo_initials.png/768px-LinkedIn_logo_initials.png" style="height: 35px;" alt="LinkedIn">
           </a>
         </div>
       </nav>
