--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,12 +5,12 @@
       <link rel="stylesheet" href="/resources/css/style.css">
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <nav>
-        <div id="mynavbar" class="row" style="background-color: rgba(0, 0, 0, 0.85)">
+        <div class="row mynavbar" style="background-color: rgba(0, 0, 0, 0.85)">
           <a class="nav-link col" href="/video"><h3>Video</h3></a>
           <a class="nav-link col" href="/music"><h3>Music</h3></a>
           <a class="nav-link col" href="/interactive"><h3>Interactive</h3></a>
           <a class="nav-link col-1" href="https://www.github.com/dreamchef">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/2048px-Octicons-mark-github.svg.png" alt="GitHub" style="height: 35px;">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/2048px-Octicons-mark-github.svg.png" alt="GitHub" style="height: 35px; filter: invert(1);">
           </a>
           <a class="nav-link col-1" href="https://www.linkedin.com/in/daniellisle">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/LinkedIn_logo_initials.png/768px-LinkedIn_logo_initials.png" style="height: 35px;" alt="LinkedIn">
