connected to thoughtgarden static; fixed social links

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,10 +9,10 @@
           <a class="nav-link col" href="/video"><h3>Video</h3></a>
           <a class="nav-link col" href="/music"><h3>Music</h3></a>
           <a class="nav-link col" href="/interactive"><h3>Interactive</h3></a>
-          <a class="nav-link col-1" href="https://www.github.com/dreamchef">
+          <a class="nav-link col-1" href="https://www.github.com/dreamchef" target="_blank" rel="noopener noreferrer">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/2048px-Octicons-mark-github.svg.png" alt="GitHub" style="height: 35px; filter: invert(1);">
           </a>
-          <a class="nav-link col-1" href="https://www.linkedin.com/in/daniellisle">
+          <a class="nav-link col-1" href="https://www.linkedin.com/in/daniellisle" target="_blank" rel="noopener noreferrer">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/LinkedIn_logo_initials.png/768px-LinkedIn_logo_initials.png" style="height: 35px;" alt="LinkedIn">
           </a>
         </div>
