--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,6 +9,7 @@
           <a class="nav-link col" href="/video"><h3>Video</h3></a>
           <a class="nav-link col" href="/music"><h3>Music</h3></a>
           <a class="nav-link col" href="/interactive"><h3>Interactive</h3></a>
+          <a class="nav-link col" href="https://thoughtgarden.xyz"><h3>ThoughtGarden</h3></a>
           <a class="nav-link col-1" href="https://www.github.com/dreamchef" target="_blank" rel="noopener noreferrer">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/2048px-Octicons-mark-github.svg.png" alt="GitHub" style="height: 35px; filter: invert(1);">
           </a>
