added google analytics tracking id

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,4 +20,12 @@
         </div>
       </nav>
       <title>DREAMCHEF</title>
+      <script src="https://www.googletagmanager.com/gtag/js?id=G-Z3CV369SGB"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-Z3CV369SGB');
+      </script>
     </head>
